[package]
name = "advent-of-code-2025"
version = "0.1.0"
rust-version = "1.91"
authors = ["Max Davidson <davidsonmax@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]
doctest = false

[lints.rust]
unsafe_code = "deny"
future-incompatible	= "warn"
nonstandard-style	= "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"

[dependencies]
